k8s-manifests/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-demo-new
  labels:
    name: k8s-demo-new
    purpose: demo
