k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo-app-service
  namespace: k8s-demo
  labels:
    app: k8s-demo-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: k8s-demo-app
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo-app-nodeport
  namespace: k8s-demo
  labels:
    app: k8s-demo-app
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
    nodePort: 30080
  selector:
    app: k8s-demo-app
